# budgetFlow-ui/src/openapi/openapiExpense.json
@@ -307,6 +307,16 @@
           "Income"
         ],
         "operationId": "getIncomeByUserByMonth",
+        "parameters": [
+          {
+            "name": "inGroup",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "boolean"
+            }
+          }
+        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -370,6 +380,16 @@
           "Expense"
         ],
         "operationId": "getAllExpenseByUserByMonth",
+        "parameters": [
+          {
+            "name": "inGroup",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "boolean"
+            }
+          }
+        ],
         "requestBody": {
           "content": {
             "application/json": {
